syntax = "proto3";

package bio.ris;

import "github.com/bio-routing/bio-rd/net/api/net.proto";
import "github.com/bio-routing/bio-rd/route/api/route.proto";
option go_package = "github.com/bio-routing/bio-rd/cmd/ris/api";

service RoutingInformationService {
    rpc LPM(LPMRequest) returns (LPMResponse) {}
}

message LPMRequest {
    string router = 1;
    uint64 vrf_id = 2;
    bio.net.Prefix pfx = 3;
}

message LPMResponse {
    repeated bio.route.Route routes = 1;
}
